# bike-sharing-demand

./: .env.template  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
airflow/dags/: etl_processing.py  retrain_the_model.py
airflow/secrets/: variables.yaml
dockerfiles/airflow/: Dockerfile
dockerfiles/fastapi/: Dockerfile  app.py  config.py  models.py  requirements.txt  routes.py  utils.py
dockerfiles/fastapi/files/: bike_sharing_demand_data_info.json
dockerfiles/fastapi/templates/: index.html
dockerfiles/mlflow/: Dockerfile
dockerfiles/postgres/: Dockerfile  mlflow.sql
notebooks/: data_exploration.ipynb  model_training.ipynb  training_experiments.ipynb
src/: encoding_functions.py
