[tool.poetry]
name = "bike-sharing-demand"
version = "0.1.0"
description = ""
authors = ["Christian Conchari <chrisconchari@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.1"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1.post1"
kaggle = "^1.6.17"
pandas = "^2.2.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
